# ShoppingCart

./: .gitignore  README.md  ShoppingCartWebserver.sln  ShoppingCartWebserver.vcxproj  ShoppingCartWebserver.vcxproj.filters  Source.cpp  index.html
Shared/: CMakeLists.txt  README.md  TESTS.http  cart.db  main.cpp  recompile.sh  run.sh  startup.txt
Shared/headers/: cart.hpp  db.hpp  defines.hpp  http.hpp  product.hpp
Shared/public/: billing.html  cart.html  home.html  index.html  wishlist.html
Shared/public/js/: cart.js
css/: style.css
js/: advertiser.js  cart.js
js/stubs/: profile.js
